sugar/tests/fail/type_alias2.mx

type Id a = a ;

x : Id 0 0 |- x

